--- a/hangman/styles.css
+++ b/hangman/styles.css
@@ -583,7 +583,7 @@ span {
 
 .footer-content{
     background-color: #ffdb5e;
-    padding: 60px 120px;
+    padding: 60px 80px 20px 80px;
     position: absolute;
     font-size: 1.2em;
     font-weight: 500;
@@ -591,6 +591,9 @@ span {
    
 }
 
+.game-info{
+    margin-top:100px;
+}
 .game-info h1{
     text-align: center;
     font-weight: 800;
@@ -600,18 +603,27 @@ span {
 .game-info p{
     text-align: center;
     margin-top:20px;
+    font-size: 20px;
     font-weight: 400;
 }
 
 .how-to-play{
+    font-size: 20px;
+    border-radius: 10px;
+    background-color: whitesmoke;
+    padding:10px 30px;
+    margin-left:20px;
+    min-width:580px;
     margin-top:40px;
     font-weight: 400;
+    border: 5px solid #cfcece;
+    box-shadow: 0 1.2em 2.4em rgba(111, 85, 0, 0.25);
 }
 .how-to-play h2{
     text-decoration:underline;
     font-weight:800;
     text-align: center;
-    margin-bottom: 30px;
+    margin-bottom: 5px;
 }
 .how-to-play li{
     margin-top:20px;
@@ -628,15 +640,19 @@ span {
 }
 
 .scroll-up li {
-    margin: 0; /* Remove default margin */
+    margin-left:0px; /* Remove default margin */
 }
 
 .scroll-up a {
-    margin-top:10px;
+    margin-top:20px;
     display: inline-block; /* Make the anchor element behave like a block element */
+    margin-left:0px;
 }
 
-
+.abt-wrapper{
+    display:flex;
+    justify-content: space-evenly;
+}
 
 
 
